# ditto

./: .gitignore  Cargo.toml  README.md  art.txt  ditto.txt  run_Ditto.sh  rust-toolchain.toml  rustc-ice-2024-05-23T08_57_45-16285.txt  rustc-ice-2024-05-23T08_57_45-16286.txt  rustc-ice-2024-05-23T08_57_45-16287.txt  rustc-ice-2024-05-23T08_57_45-16288.txt  rustc-ice-2024-05-23T08_57_45-16289.txt  rustc-ice-2024-05-23T08_57_45-16290.txt  rustc-ice-2024-05-23T08_57_45-16291.txt  rustc-ice-2024-05-23T08_57_45-16292.txt  rustc-ice-2024-05-23T08_57_45-16293.txt  rustc-ice-2024-05-23T08_57_45-16294.txt  rustc-ice-2024-05-23T08_57_45-16295.txt  rustc-ice-2024-05-23T08_57_45-16296.txt  rustc-ice-2024-06-17T15_15_44-57848.txt
.github/workflows/: rust.yml
macro/: Cargo.toml
macro/src/: lib.rs
macro_utils/: Cargo.toml
macro_utils/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
rpc_call/: Cargo.toml
rpc_call/src/: lib.rs
rpc_call_derive/: Cargo.toml
rpc_call_derive/src/: lib.rs
rpc_test/: Cargo.toml
rpc_test/src/: lib.rs  test_config.rs  test_data.rs
rpc_test_attribute/: Cargo.toml
rpc_test_attribute/src/: lib.rs
test/: Cargo.toml  secret_example.json
test/src/: lib.rs
test/tests/: block_hash_and_number.rs  block_number.rs  chain_id.rs  estimate_fee.rs  getBlockWithTxHashes.rs  syncing.rs  test_block_hash_and_number.rs  test_block_number.rs  test_estimate_fee.rs  test_get_block_with_tx_hashes.rs  test_get_class_hash_at.rs  test_get_storage_at.rs
test/unit/: blockHashAndNumber.json  blockNumber.json  chainId.json  estimateFee.json  getBlockWithTxHashes.json  syncing.json  test.json  test_starknet_getBlockWithTxHashes.json
unit_tests/: Cargo.toml
unit_tests/src/: constants.rs  fixtures.rs  lib.rs  macros.rs
unit_tests/src/constants/: mod.rs
unit_tests/src/constants/mainnet/: block.rs  contract.rs  mod.rs  network.rs  transaction.rs
unit_tests/src/constants/sepolia/: constants.rs
unit_tests/tests/: common.rs  test_add_invoke_transaction.rs  test_block_hash_and_number.rs  test_block_number.rs  test_call.rs  test_chain_id.rs  test_deploy_account_transaction.rs  test_estimate_fee.rs  test_estimate_message_fee.rs  test_get_block_transaction_count.rs  test_get_block_with_receipts.rs  test_get_block_with_tx_hashes.rs  test_get_block_with_txs.rs  test_get_class.rs  test_get_class_at.rs  test_get_class_hash_at.rs  test_get_events.rs  test_get_nonce.rs  test_get_state_update.rs  test_get_storage_at.rs  test_get_transaction_by_block_id_and_index.rs  test_get_transaction_by_hash.rs  test_get_transaction_receipt.rs  test_get_transaction_status.rs  test_simulate_transaction.rs  test_spec_version.rs  test_specversion.rs  test_syncing.rs  test_trace_block_transactions.rs  test_trace_transaction.rs
