[package]
name = "rpc_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
colored = "2.1.0"
jsonrpsee = { version = "0.21.0", features = ["client"] }
serde = "1.0.194"
serde_json = "1.0.110"
