[package]
name = "unit_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
rstest = "0.18.2"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "96c6803", default-features = false }
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "96c6803", default-features = false }
starknet-providers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "96c6803", default-features = false }
starknet-accounts = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "96c6803", default-features = false }
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "96c6803", default-features = false }
env_logger = "0.10.1"
macro_utils = { path = "../macro_utils/" }

[dev-dependencies]
jsonrpsee = { version = "0.21.0", features = ["client"] }
tokio = { version = "1", features = ["full", "test-util"] }
flate2 = "1.0.28"
log = "0.4.20"
macro = { path = "../macro/" }
serde = "1.0.195"
serde_json = "1.0.111"
